--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,25 @@
+* {
+    margin: 0px;
+}
+
 h1 {
     font-weight: 700;
     font-size: 50px;
     background-color: rgb(241, 241, 155);
     text-align: center;
     font-family: "Arial", sans-serif;
+    padding: 30px;
 }
 
-ul {
+div {
     font-size: 25px;
     background-color: rgb(247, 221, 75);
     font-family: "Arial", sans-serif;
+    text-align: center;
+}
+
+a {
+    padding: 30px; 
+    display: inline-block;
+    margin: auto;
 }
